Done to every GUI for nodes

--- a/Developments/GUI/app/views/common/navigator.html
+++ b/Developments/GUI/app/views/common/navigator.html
@@ -169,11 +169,17 @@
             <span class="nav-label">Distinct</span>
         </a>
     </li>
+    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="takeTop"  data-idx="3" data-mode="tool">
+        <a href="#">
+            <span class="nav-label">takeTop</span>
+        </a>
+    </li>
     <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="parseUserAgent"  data-idx="3" data-mode="tool">
         <a href="#">
             <span class="nav-label">ParseUserAgent</span>
         </a>
     </li>
+
 
     <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="parseDateTime"  data-idx="3" data-mode="tool">
         <a href="#">
