--- a/Developments/GUI/app/views/common/navigator.html
+++ b/Developments/GUI/app/views/common/navigator.html
@@ -24,7 +24,7 @@
   <aside class="navbar-default sidebar">
   <div class="sidebar-overlay-head">
   <img src="../assets/images/logo-warning-white@2X.png" alt="Logo" width="80">
-  <a href="#" class="sidebar-switch action-sidebar-close">
+  <a href class="sidebar-switch action-sidebar-close">
     <i class="fa fa-times"></i>
   </a>
   </div>
@@ -51,9 +51,10 @@
 
   <div class="sidebar-content">
     <div class="text-center">
+      <button class="btn btn-success btn-sm" type="button" ng-click="main()">Main</button>
       <button class="btn btn-primary btn-sm" type="button" ng-click="upload()">Upload</button>
-      <button class="btn btn-default btn-sm" type="button" ng-click="save()">Save</button>
       <button class="btn btn-warning btn-sm" type="button" ng-click="run()">Run</button>
+      <button class="btn btn-default btn-sm" type="button" ng-click="result()">Result</button>
 
     </div>
   <div class="sidebar-default-visible small text-uppercase sidebar-section m-t-3 m-b-2">
@@ -78,111 +79,111 @@
   <ul class="side-menu">
 
     <li class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="map" data-idx="1" data-mode="tool">
-        <a href="#">
+        <a href>
           <div>
             <div class="nav-label" style="z-index:10000;">Map</div>
           </div>
         </a>
     </li>
     <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="reduce"  data-idx="2" data-mode="tool">
-        <a href="#">
+        <a href>
             <span class="nav-label">Reduce</span>
         </a>
     </li>
     <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="filter"  data-idx="3" data-mode="tool">
-        <a href="#">
+        <a href>
             <span class="nav-label">Filter</span>
         </a>
     </li>
     <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="extractUsingRegex"  data-idx="3" data-mode="tool">
-        <a href="#">
+        <a href>
             <span class="nav-label">ExtractUsingRegex</span>
         </a>
     </li>
     <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="splitUsingRegex"  data-idx="3" data-mode="tool">
-        <a href="#">
+        <a href>
             <span class="nav-label">SplitUsingRegex</span>
         </a>
     </li>
     <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="splitUsingDelimiter"  data-idx="3" data-mode="tool">
-        <a href="#">
+        <a href>
             <span class="nav-label">SplitUsingDelimiter</span>
         </a>
     </li>
     <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="duplicate"  data-idx="3" data-mode="tool">
-        <a href="#">
+        <a href>
             <span class="nav-label">Duplicate</span>
         </a>
     </li>
     <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="mergeWithDelimiter"  data-idx="3" data-mode="tool">
-        <a href="#">
+        <a href>
             <span class="nav-label">MergeWithDelimiter</span>
         </a>
     </li>
     <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="filterWithParameter"  data-idx="3" data-mode="tool">
-        <a href="#">
+        <a href>
             <span class="nav-label">FilterWithParameter</span>
         </a>
     </li>
     <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="filterUsingRegex"  data-idx="3" data-mode="tool">
-        <a href="#">
+        <a href>
             <span class="nav-label">FilterUsingRegex</span>
         </a>
     </li>
     <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="slice"  data-idx="3" data-mode="tool">
-        <a href="#">
+        <a href>
             <span class="nav-label">Slice</span>
         </a>
     </li>
     <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="convertTypeTo"  data-idx="3" data-mode="tool">
-        <a href="#">
+        <a href>
             <span class="nav-label">ConvertTypeTo</span>
         </a>
     </li>
     <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="addColumn"  data-idx="3" data-mode="tool">
-        <a href="#">
+        <a href>
             <span class="nav-label">AddColumn</span>
         </a>
     </li>
     <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="chooseColumn"  data-idx="3" data-mode="tool">
-        <a href="#">
+        <a href>
             <span class="nav-label">ChooseColumn</span>
         </a>
     </li>
     <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="flatten"  data-idx="3" data-mode="tool">
-        <a href="#">
+        <a href>
             <span class="nav-label">Flatten</span>
         </a>
     </li>
     <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="reduceBy"  data-idx="3" data-mode="tool">
-        <a href="#">
+        <a href>
             <span class="nav-label">ReduceBy</span>
         </a>
     </li>
     <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="sortBy"  data-idx="3" data-mode="tool">
-        <a href="#">
+        <a href>
             <span class="nav-label">SortBy</span>
         </a>
     </li>
     <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="distinct"  data-idx="3" data-mode="tool">
-        <a href="#">
+        <a href>
             <span class="nav-label">Distinct</span>
         </a>
     </li>
     <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="takeTop"  data-idx="3" data-mode="tool">
-        <a href="#">
+        <a href>
             <span class="nav-label">takeTop</span>
         </a>
     </li>
     <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="parseUserAgent"  data-idx="3" data-mode="tool">
-        <a href="#">
+        <a href>
             <span class="nav-label">ParseUserAgent</span>
         </a>
     </li>
 
 
     <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="parseDateTime"  data-idx="3" data-mode="tool">
-        <a href="#">
+        <a href>
             <span class="nav-label">ParseDateTime</span>
         </a>
     </li>
@@ -199,19 +200,19 @@
   <ul class="side-menu">
 
     <li class="draggable_operator primary-submenu" data-nb-inputs="1" data-nb-outputs="0" data-title="XML" data-idx="4" data-mode="output">
-        <a href="#">
+        <a href>
           <div>
             <div class="nav-label" style="z-index:10000;">XML</div>
           </div>
         </a>
     </li>
     <li  class="draggable_operator primary-submenu" data-nb-inputs="1" data-nb-outputs="0" data-title="JSON"  data-idx="5" data-mode="output">
-        <a href="#">
+        <a href>
             <span class="nav-label">JSON</span>
         </a>
     </li>
     <li  class="draggable_operator primary-submenu" data-nb-inputs="1" data-nb-outputs="0" data-title="CSV"  data-idx="6" data-mode="output">
-        <a href="#">
+        <a href>
             <span class="nav-label">CSV</span>
         </a>
     </li>
