add remove header node

--- a/Developments/GUI/app/views/common/navigator.html
+++ b/Developments/GUI/app/views/common/navigator.html
@@ -188,6 +188,12 @@
         </a>
     </li>
 
+    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="removeHeader"  data-idx="3" data-mode="tool">
+        <a href>
+            <span class="nav-label">Remove Header</span>
+        </a>
+    </li>
+
 
 
   </ul>
