--- a/Developments/GUI/app/views/modal/view_node.html
+++ b/Developments/GUI/app/views/modal/view_node.html
@@ -258,7 +258,7 @@
           <div class="form-group">
               <label for="exampleInputPassword1" class="col-sm-3 control-label">Operation</label>
               <div class="col-sm-4">
-                <select ng-model="chooseColumn.toType" class="form-control col-sm-6">
+                <select ng-model="chooseColumn.operation" class="form-control col-sm-6">
                   <option value="keep">keep</option>
                   <option value="remove">remove</option>
                 </select>
