Button for sample loading

--- a/Developments/GUI/app/views/main.html
+++ b/Developments/GUI/app/views/main.html
@@ -1,6 +1,8 @@
 <div class="row">
+    <button class="btn btn-success btn-sm" ng-click="load_sample_button()" style="margin-top:30px;">Load the Sample</button>
   <button class="btn btn-warning btn-sm delete_selected_button" style="margin-top:30px;">Delete selected operator / link</button>
   <button class="btn btn-danger btn-sm delete_all_button" style="margin-top:30px;">Clear All</button>
+
 </div>
 <div class="row" id="chart_container">
 
