add parkMedian and findDistance for GUI

--- a/Developments/GUI/app/views/common/navigator.html
+++ b/Developments/GUI/app/views/common/navigator.html
@@ -193,6 +193,16 @@
             <span class="nav-label">Remove Header</span>
         </a>
     </li>
+    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="findDistance"  data-idx="3" data-mode="tool">
+        <a href>
+            <span class="nav-label">Find Distance</span>
+        </a>
+    </li>
+    <li  class="primary-submenu draggable_operator" data-nb-inputs="1" data-nb-outputs="1" data-title="parkMedian"  data-idx="3" data-mode="tool">
+        <a href>
+            <span class="nav-label">Park Median</span>
+        </a>
+    </li>
 
 
 
