--- a/Developments/GUI/app/views/modal/view_node.html
+++ b/Developments/GUI/app/views/modal/view_node.html
@@ -359,6 +359,56 @@
 
           </div>
         </form>
+        <form class="form-horizontal" ng-show="tempNode.title === 'findDistance'">
+
+          <div class="form-group">
+              <label for="exampleInputPassword1" class="col-sm-3 control-label">Unit</label>
+              <div class="col-sm-9">
+                <select ng-model="findDistance.unit" class="form-control col-sm-6">
+                  <option value="miles">miles</option>
+                  <option value="kms">kms</option>
+                </select>
+              </div>
+
+          </div>
+          <div class="form-group">
+              <label for="exampleInputPassword1" class="col-sm-3 control-label">lat1</label>
+              <div class="col-sm-4">
+                  <input type="text" class="form-control" id="exampleInputPassword1" placeholder="" ng-model="findDistance.lat1" />
+              </div>
+
+          </div>
+          <div class="form-group">
+              <label for="exampleInputPassword1" class="col-sm-3 control-label">lng1</label>
+              <div class="col-sm-4">
+                  <input type="text" class="form-control" id="exampleInputPassword1" placeholder="" ng-model="findDistance.lng1" />
+              </div>
+
+          </div>
+          <div class="form-group">
+              <label for="exampleInputPassword1" class="col-sm-3 control-label">lat2</label>
+              <div class="col-sm-4">
+                  <input type="text" class="form-control" id="exampleInputPassword1" placeholder="" ng-model="findDistance.lat2" />
+              </div>
+
+          </div>
+          <div class="form-group">
+              <label for="exampleInputPassword1" class="col-sm-3 control-label">lng2</label>
+              <div class="col-sm-4">
+                  <input type="text" class="form-control" id="exampleInputPassword1" placeholder="" ng-model="findDistance.lng2" />
+              </div>
+
+          </div>
+        </form>
+        <form class="form-horizontal" ng-show="tempNode.title === 'parkMedian'">
+
+          <div class="form-group">
+              <label for="exampleInputPassword1" class="col-sm-3 control-label">Column</label>
+              <div class="col-sm-4">
+                  <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Column" ng-model="parkMedian.column">
+              </div>
+          </div>
+        </form>
       </div>
 
       <div class="modal-footer">
